@@ -484,14 +484,6 @@ sub doit_in_builddir_noerror {
 	return $this->_generic_doit_in_dir($this->get_buildpath, \&print_and_doit_noerror, @args);
 }
 
-# Changes working directory to the build directory (if needed),
-# calls print_and_complex_doit(@_) and changes working directory back to the
-# top directory.
-sub complex_doit_in_builddir {
-	my ($this, @args) = @_;
-	return $this->_in_dir($this->get_buildpath, \&print_and_complex_doit, @args);
-}
-
 # In case of out of source tree building, whole build directory
 # gets wiped (if it exists) and 1 is returned. If build directory
 # had 2 or more levels, empty parent directories are also deleted.
