@@ -51,6 +51,8 @@ debhelper (11.3) UNRELEASED; urgency=medium
     the empty file on install if absent.  Thanks to Rhonda D'Vine for
     suggesting the improvement.  (Closes: #776853)
   * Dh_Lib.pm: Re-organise exports.
+  * Dh_Lib.pm: Retract "print_and_complex_doit"; the only potential
+    consumer went with a different code snippet.
 
   [ Dmitry Shachnev ]
   * qmake.pm: Use ${DEB_HOST_GNU_TYPE}-qmake wrapper for
